--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.4",
+    "morgan": "^1.10.0",
     "shortid": "^2.2.16",
     "valid-url": "^1.0.9"
   },
