--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dns-lookup": "^0.1.0",
     "dotenv": "^8.6.0",
     "express": "^4.18.2",
     "mongodb": "^5.3.0",
